add margin top and bottom to form items

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <script href="scripts.js"></script>
+    <script href="js/scripts.js"></script>
 
     <form class="gather-stuff">
       <div class=gather-small>
@@ -30,7 +30,7 @@
         <input class="input" type="text" id="sideThree" name="number"/>
       </div>
 
-      <input type="button" value="Check" onclick="triangleTracker()"/>
+      <input class="submit" type="button" value="Check" onclick="triangleTracker()"/>
     </form>
 
 
