--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <script href="js/scripts.js"></script>
+    <script href="js/scripts.js" type="text/javascript"></script>
     <script>
 
     function triangleTracker(){
@@ -32,6 +32,21 @@
 
     </script>
 
+
+    <!-- Heading goes here -->
+    <br>
+    <br>
+    <br>
+    <h1 class="heading">Welcome to my Triangle Tracker App!</h1>
+    <br>
+    <br>
+    <br>
+
+    <hr>
+
+    <!-- Instructions on using the app -->
+
+
     <form class="gather-stuff">
       <div class=gather-small>
         <div class="label">
@@ -56,8 +71,6 @@
 
       <input class="submit" type="button" value="Check" onclick="triangleTracker()"/>
     </form>
-
-
 
   </body>
 </html>
