--- a/index.html
+++ b/index.html
@@ -45,7 +45,15 @@
     <hr>
 
     <!-- Instructions on using the app -->
-
+    <p>
+      The instructions are very simple.
+    </p>
+    <p>
+      Enter the length of any three sides of your "triangle", and click check.
+    </p>
+    <p>
+      Sit back and wait for your results to compile.👌👌👌
+    </p>
 
     <form class="gather-stuff">
       <div class=gather-small>
