--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Triange Tracker</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
   </head>
   <body>
     <script href="js/scripts.js" type="text/javascript"></script>
@@ -44,41 +45,49 @@
 
     <hr>
 
-    <!-- Instructions on using the app -->
-    <p>
-      The instructions are very simple.
-    </p>
-    <p>
-      Enter the length of any three sides of your "triangle", and click check.
-    </p>
-    <p>
-      Sit back and wait for your results to compile.👌👌👌
-    </p>
+    <!-- Main content goes here-->
+    <div class="main">
 
-    <form class="gather-stuff">
-      <div class=gather-small>
-        <div class="label">
-          Enter one side:
-        </div>
-        <input class="input" type="text" id="sideOne" name="number"/>
+      <!-- Instructions on using the app -->
+      <div class="instructions">
+        <p>
+          The instructions are very simple.
+        </p>
+        <p>
+          Enter the length of any three sides of your "triangle", and click check.
+        </p>
+        <p>
+          Sit back and wait for your results to compile.👌👌👌
+        </p>
       </div>
 
-      <div class=gather-small>
-        <div class="label">
-          Enter a second side:
+      <!-- Form goes here -->
+      <form class="gather-stuff">
+        <div class=gather-small>
+          <div class="label">
+            Enter one side:
+          </div>
+          <input class="input" type="text" id="sideOne" name="number"/>
         </div>
-        <input class="input" type="text" id="sideTwo" name="number"/>
-      </div>
 
-      <div class=gather-small>
-        <div class="label">
-          Enter a third side:
+        <div class=gather-small>
+          <div class="label">
+            Enter a second side:
+          </div>
+          <input class="input" type="text" id="sideTwo" name="number"/>
         </div>
-        <input class="input" type="text" id="sideThree" name="number"/>
-      </div>
 
-      <input class="submit" type="button" value="Check" onclick="triangleTracker()"/>
-    </form>
+        <div class=gather-small>
+          <div class="label">
+            Enter a third side:
+          </div>
+          <input class="input" type="text" id="sideThree" name="number"/>
+        </div>
+
+        <input class="submit gather-small" type="button" value="Check" onclick="triangleTracker()"/>
+      </form>
+
+    </div>
 
   </body>
 </html>
