Center items successfully

--- a/index.html
+++ b/index.html
@@ -35,15 +35,11 @@
 
 
     <!-- Heading goes here -->
-    <br>
-    <br>
-    <br>
-    <h1 class="heading">Welcome to my Triangle Tracker App!</h1>
-    <br>
-    <br>
-    <br>
-
-    <hr>
+    <div class="nav">
+      <br>
+      <h1 class="heading">Welcome to my Triangle Tracker App!</h1>
+      <br>
+    </div>
 
     <!-- Main content goes here-->
     <div class="main">
