--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       var sideThree = parseFloat(document.getElementById("sideThree").value);
       var sides = [sideOne, sideTwo, sideThree];
 
+
       if((sideOne + sideTwo) <= sideThree || (sideOne + sideThree) <= sideTwo || (sideTwo + sideThree) <= sideOne){
         alert("Your shape is not a triangle");
       }
@@ -63,24 +64,24 @@
           <div class="label">
             Enter one side:
           </div>
-          <input class="input" type="text" id="sideOne" name="number"/>
+          <input class="input" type="text" id="sideOne" name="number">
         </div>
 
         <div class=gather-small>
           <div class="label">
             Enter a second side:
           </div>
-          <input class="input" type="text" id="sideTwo" name="number"/>
+          <input class="input" type="text" id="sideTwo" name="number">
         </div>
 
         <div class=gather-small>
           <div class="label">
             Enter a third side:
           </div>
-          <input class="input" type="text" id="sideThree" name="number"/>
+          <input class="input" type="text" id="sideThree" name="number">
         </div>
 
-        <input class="submit gather-small" type="button" value="Check" onclick="triangleTracker()"/>
+        <input class="submit gather-small" type="button" onclick="triangleTracker()">
       </form>
 
     </div>
