--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
         <input class="submit gather-small" type="button" value="Check" onclick="triangleTracker()">
       </form>
 
+      <div class="footer">
+        <p>
+          Copyright © Simon Gatheru Waigi
+        </p>
+      </div>
+
     </div>
 
   </body>
