--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
   </head>
   <body>
-    <script href="js/scripts.js" type="text/javascript"></script>
+    <script src="js/scripts.js"></script>
 
-    <script>
+    <!-- <script>
 
     function triangleTracker(){
       var sideOne = parseFloat(document.getElementById("sideOne").value);
@@ -33,7 +33,7 @@
 
     }
 
-    </script>
+    </script> -->
 
 
     <!-- Heading goes here -->
